# Insertion

./: Dockerfile  README.md  docker-compose.yml  kill_update.cpp  schema.sql
character/: CMakeLists.txt  Dockerfile  character_update.cpp
characters/: CMakeLists.txt  Dockerfile  character_update.cpp
kill/: CMakeLists.txt  Dockerfile  kill_update.cpp
kills/: CMakeLists.txt  Dockerfile  kill_update.cpp
system/: CMakeLists.txt
systems/: Dockerfile  system_update.cpp
tribes/: CMakeLists.txt  Dockerfile  tribes_update.cpp
